2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	Fix component name

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* configure.ac:
	Remove tar filenames max lenght limitation

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	*  (svn:ignore):
	* flumotion/component/consumers/applestreamer (svn:ignore):
	* flumotion/test (svn:ignore):
	* flumotion/component/consumers (svn:ignore):
	* flumotion/project (svn:ignore):
	* flumotion (svn:ignore):
	* flumotion/component/muxers (svn:ignore):
	* flumotion/component (svn:ignore):
	* flumotion/component/muxers/mpegts (svn:ignore):
	Add svn ignores
	* autoregen.sh (added):
	* INSTALL (added):
	Add missing dist files
	* configure.ac:
	Fix version number and configure warnings

2010-01-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Increase session timeout to 30 seconds

2010-01-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_resource.py:
	Reduce the session timeout for testing

2010-01-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Set the session timeout before starting the checking expiration method

2010-01-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_resource.py:
	Updated test suite for the resource element

2010-01-02  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Handle "fragment not found" exceptions correctly.

2010-01-07  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Misc syntax error.

2010-01-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Add errback for authentication failure

2010-01-07  Andoni Morales Alastruey  <amorales@flumotion.com>
